Fix Less s/script/style tag matching

--- a/testdata/nodeprocessor/less.html
+++ b/testdata/nodeprocessor/less.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/css+less">
+  <style type="text/css+less">
     .button {
       color: red;
       padding: 10px;
@@ -10,7 +10,7 @@
         background: darkred;
       }
     }
-  </script>
+  </style>
 </head>
 <body>
   <button class="button">Click me</button>
