--- a/testdata/nodeprocessor/less_variables.html
+++ b/testdata/nodeprocessor/less_variables.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script type="text/css+less">
+  <style type="text/css+less">
     @primary-color: #ff0000;
     @padding: 15px;
     
@@ -10,7 +10,7 @@
       padding: @padding;
       color: white;
     }
-  </script>
+  </style>
 </head>
 <body>
   <div class="box">Content</div>
