--- a/testdata/nodeprocessor/mixed_styles.html
+++ b/testdata/nodeprocessor/mixed_styles.html
@@ -4,13 +4,13 @@
   <style type="text/css">
     body { margin: 0; }
   </style>
-  <script type="text/css+less">
+  <style type="text/css+less">
     @base-color: #333;
     
     p {
       color: @base-color;
     }
-  </script>
+  </style>
 </head>
 <body>
   <p>Hello</p>
