--- a/testdata/fixtures/interpolation.html
+++ b/testdata/fixtures/interpolation.html
@@ -1,4 +1,4 @@
 <p>Please wait, there are 123 people in front.</p>
 <p>Please wait, there are 95 people in front.</p>
 <p>Your ticket ID is 123.</p>
-
+<p v-if="true">Set values with vuego component</p>
