--- a/testdata/fixtures/v-if-stateful-interpolation.html
+++ b/testdata/fixtures/v-if-stateful-interpolation.html
@@ -5,3 +5,26 @@ name, [id]
 Index:
 
 name2, name3
+
+<h4>Index Summary</h4>
+<ul>
+  <li>
+    Total indexes:
+
+    <strong>4</strong>
+  </li>
+
+  <li>
+    Primary keys:
+
+    <strong>name</strong><strong>, [id]</strong>
+  </li>
+
+  <li>
+    Performance indexes:
+
+    <strong>
+      <span>name2</span><span>, name3</span>
+    </strong>
+  </li>
+</ul>
