Update Vuego capitalization

--- a/testdata/fixtures/blog.html
+++ b/testdata/fixtures/blog.html
@@ -1,9 +1,9 @@
 <article>
-  <h1>Building Modern Web Applications with VueGo</h1>
+  <h1>Building Modern Web Applications with Vuego</h1>
   <p>
     <em>By Jane Developer on November 14, 2025</em>
   </p>
-  <p>VueGo combines the simplicity of Vue.js-style templates with the power of Go&#39;s template engine. This article explores how to leverage both for building dynamic, server-rendered applications.</p>
+  <p>Vuego combines the simplicity of Vue.js-style templates with the power of Go&#39;s template engine. This article explores how to leverage both for building dynamic, server-rendered applications.</p>
   <h2>Key Features</h2>
   <ul>
     <li>
@@ -22,7 +22,7 @@
   <h2>Getting Started</h2>
   <p>Follow these steps to begin:</p>
   <ol>
-    <li>Install VueGo package with go get</li>
+    <li>Install Vuego package with go get</li>
     <li>Create your first template with .vuego extension</li>
     <li>Set up data as a map[string]any</li>
     <li>Render using vue.Render()</li>
