--- a/testdata/fixtures/composition.html
+++ b/testdata/fixtures/composition.html
@@ -23,6 +23,6 @@ document.addEventListener('DOMContentLoaded', () => new VuegoApp());
 
 </script>
 <div class="card">
-  <h1>Hello world</h1>
+  <h1>Vuego</h1>
   <p id="container">Default</p>
 </div>
