--- a/testdata/fixtures/issue-7.html
+++ b/testdata/fixtures/issue-7.html
@@ -1,12 +1,9 @@
-<a class="w-10 h-10 flex items-center justify-center border select-none bg-[#141414] border-[#2a2a2a] font-semibold cursor-default">
-
-	1
-  </a>
-<a class="w-10 h-10 flex items-center justify-center border select-none">
-
-	2
-  </a>
-<a class="w-10 h-10 flex items-center justify-center border select-none">
-
-	3
-  </a>
+<li class="class-a">1</li>
+<li class="class-b">2</li>
+<li class="class-b">3</li>
+<li class="class-a">1</li>
+<li class="class-b">2</li>
+<li class="class-b">3</li>
+<li class="class-pleb">1</li>
+<li class="class-admin">2</li>
+<li class="class-pleb">3</li>
